# aoc-2024

./: Cargo.toml
src/day01/: part1.rs  part2.rs
src/day02/: part1.rs  part2.rs
src/day03/: input.txt  part1.rs  part2.rs
src/day05/: part1.rs
