[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "01-01"
path = "src/day01/part1.rs"

[[bin]]
name = "01-02"
path = "src/day01/part2.rs"

[[bin]]
name = "01-01-claude"
path = "src/day01/claude_part1.rs"
