[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "01-01"
path = "src/day01/part1.rs"

[[bin]]
name = "01-02"
path = "src/day01/part2.rs"

[[bin]]
name = "02-01"
path = "src/day02/part1.rs"

[[bin]]
name = "02-02"
path = "src/day02/part2.rs"
